コーディング調整

--- a/html/14_ululele.html
+++ b/html/14_ululele.html
@@ -95,7 +95,7 @@
 			<div class="ptb20 sm-ptb30 cols-wide bg-dots">
 				<div class="cols jc-c ai-c gutter-70 gutter-md-40">
 					<div class="col-6 col-sm-10 sm-mt40 ord1 sm-ord2">
-						<figure><img src="../img/ululele/sec1-img1.png" width="455" height="448" class="img-rspsv" alt="ウクレレ"></figure>
+						<figure><img src="../img/ukulele/sec1-img1.png" width="455" height="448" class="img-rspsv" alt="ウクレレ"></figure>
 					</div>
 					<div class="col-6 col-sm-12 ord2 sm-ord1">
 						<div class="ttl">
@@ -163,7 +163,7 @@
 					</div>
 				</section>
 				<div class="col-5 col-sm-6 return-3 return-sm-0 sm-mr20 mt-150 md-mt-100 sm-mt-60 z2 ord2 sm-ord1">
-					<figure><img src="../img/ululele/sec3-img1.jpg" width="314" height="290" class="img-rspsv-full" alt="レッスン内容例"></figure>
+					<figure><img src="../img/ukulele/sec3-img1.jpg" width="314" height="290" class="img-rspsv-full" alt="レッスン内容例"></figure>
 				</div>
 			</div>
 		</section>
@@ -200,7 +200,7 @@
 									</div>
 									<p class="mt20">コルドバのソプラノウクレレ、コンサートウクレレ。マホガニーならではの芯のあるサウンドです。ケースは厚みがあって軽量、持ち運びもラクチン、安心なギグバックが付属します。</p>
 								</div>
-								<figure class="col-5 col-md-4 col-sm-8 ta-c sm-mt30"><img src="../img/ululele/sec4-img1.jpg" width="221" height="285" class="img-rspsv" alt="ウクレレ"></figure>
+								<figure class="col-5 col-md-4 col-sm-8 ta-c sm-mt30"><img src="../img/ukulele/sec4-img1.jpg" width="221" height="285" class="img-rspsv" alt="ウクレレ"></figure>
 							</div>
 							<p class="mt30">体験レッスン当日にご入会いただいた方は入会金のみ<span class="c-red">(¥17,800)</span>で差し上げます！</p>
 						</div>
