--- a/html/09_dtm.html
+++ b/html/09_dtm.html
@@ -82,7 +82,7 @@
 
 <!-- main -->
 <main>
-	<section id="content">
+	<div id="content">
 	
 		<!-- #hero -->
 		<div class="hero view view-slideup">
@@ -148,8 +148,8 @@
 				</div>
 			</div>
 			<div class="cols gutter-70 gutter-md-40">
-				<section class="col-10 col-sm-12 mt50 sm-mt-20 z1 ord1 sm-ord2">
-					<div class="bg-dots bd-blue ptb60 pl80 pr60 sm-ptb40 sm-pl30 sm-pr30 bdrs15">						
+				<div class="col-10 col-sm-12 mt50 sm-mt-20 z1 ord1 sm-ord2">
+					<div class="bg-dots bd-blue ptb60 pl80 pr60 sm-ptb40 sm-pl30 sm-pr30 bdrs15">			
 						<section>
 							<h4 class="c-white ff-sofia bgc-blue d-ib bdrs5 ptb5 plr20">STEP 01</h4>
 							<p class="mt25">ソフトの基本～応用操作、作曲の基礎テクニック、コード、伴奏の作り方、リズムや楽器のアレンジ方法、シンセサイザーの使い方、メロディー等、音楽理論、機器の操作方法を学び、楽しみながら上達していきます。</p>
@@ -163,7 +163,7 @@
 							<p class="mt25">さらに高度なリミックスやアレンジ、ボーカルや楽器演奏のレコーディング、サウンド編集、マスタリングの技術、音楽理論、アレンジ等の知識を、より実践的に学んでいきます。これらを習得し、創作意欲を高めると共に表現力も培っていきます。</p>
 						</section>
 					</div>
-				</section>
+				</div>
 				<div class="col-5 col-sm-6 return-3 return-sm-0 sm-mr20 mt-150 md-mt-100 sm-mt-60 z2 ord2 sm-ord1">
 					<figure><img src="../img/dtm/sec3-img1.jpg" width="314" height="290" class="img-rspsv-full" alt="レッスン内容例"></figure>
 				</div>
@@ -197,7 +197,7 @@
 			</div>
 		</section>
 
-	</section>
+	</div>
 </main>
 
 <!-- footer -->
@@ -280,7 +280,6 @@
 					</div>
 				</div>
 			</div>
-		</div>
 	</div>
 	<div class="copy bgc-blue ptb15 ta-c">
 		<div class="d-f sm-d-b jc-c c-white ff-sofia fz90 sm-fz80 ta-c">
