--- a/html/19_clarinet.html
+++ b/html/19_clarinet.html
@@ -82,7 +82,7 @@
 
 <!-- main -->
 <main>
-	<section id="content">
+	<div id="content">
 	
 		<!-- #hero -->
 		<div class="hero view view-slideup">
@@ -145,8 +145,8 @@
 				</div>
 			</div>
 			<div class="cols gutter-70 gutter-md-40">
-				<section class="col-10 col-sm-12 mt50 sm-mt-20 z1 ord1 sm-ord2">
-					<div class="bg-dots bd-blue ptb60 pl80 pr60 sm-ptb40 sm-pl30 sm-pr30 bdrs15">						
+				<div class="col-10 col-sm-12 mt50 sm-mt-20 z1 ord1 sm-ord2">
+					<div class="bg-dots bd-blue ptb60 pl80 pr60 sm-ptb40 sm-pl30 sm-pr30 bdrs15">			
 						<section>
 							<h4 class="c-white ff-sofia bgc-blue d-ib bdrs5 ptb5 plr20">STEP 01</h4>
 							<p class="mt25">まず初めに楽器の構え方・呼吸法など演奏に必要な基礎を段階的でゆるやかに習得していきます。 タンギング、スラー、1オクターブの音域を学び、習得した演奏技法と結び付けスタンダードから選曲してレッスンします。</p>
@@ -160,7 +160,7 @@
 							<p class="mt25">複雑なフィンガリングも段階的に習得しテクニックを向上させ、メジャー・スケール、ダイナミクス、8ビート、スウィング、半音階の指運び等、さらに高度な音楽的表現力を身につけ、幅広いジャンルの音楽を楽しめる奏法や表現力を養います。</p>
 						</section>
 					</div>
-				</section>
+				</div>
 				<div class="col-5 col-sm-6 return-3 return-sm-0 sm-mr20 mt-150 md-mt-100 sm-mt-60 z2 ord2 sm-ord1">
 					<figure><img src="../img/clarinet/sec3-img1.jpg" width="314" height="290" class="img-rspsv-full" alt="レッスン内容例"></figure>
 				</div>
@@ -312,7 +312,7 @@
 				</div>
 			</div>
 		</section>
-	</section>
+	</div>
 </main>
 
 <!-- footer -->
@@ -395,7 +395,6 @@
 					</div>
 				</div>
 			</div>
-		</div>
 	</div>
 	<div class="copy bgc-blue ptb15 ta-c">
 		<div class="d-f sm-d-b jc-c c-white ff-sofia fz90 sm-fz80 ta-c">
