--- a/html/21_school.html
+++ b/html/21_school.html
@@ -82,7 +82,7 @@
 
 <!-- main -->
 <main>
-	<section id="content">
+	<div id="content">
 	
 		<!-- #hero -->
 		<div class="hero view view-slideup">
@@ -139,7 +139,7 @@
 			</div>
 		</section>
 
-	</section>
+	</div>
 </main>
 
 <!-- footer -->
@@ -222,7 +222,6 @@
 					</div>
 				</div>
 			</div>
-		</div>
 	</div>
 	<div class="copy bgc-blue ptb15 ta-c">
 		<div class="d-f sm-d-b jc-c c-white ff-sofia fz90 sm-fz80 ta-c">
