--- a/html/35_recruit.html
+++ b/html/35_recruit.html
@@ -82,7 +82,7 @@
 
 <!-- main -->
 <main>
-	<section id="content">
+	<div id="content">
 	
 		<!-- #hero -->
 		<div class="hero view view-slideup">
@@ -156,7 +156,7 @@
 						<img src="../img/base/ic-dot.png" width="20" height="5" class="img-rspsv" alt="dot">
 					</div>
 				</div>
-				<section class="col-12 mt50 view view-slideup">
+				<div class="col-12 mt50 view view-slideup">
 					<div class="bgc-white p60 md-p40 md-p30 bdrs15 h-eq">
 						<table class="tbl-basic th-w240">
 							<tbody>
@@ -194,14 +194,14 @@
 							</tbody>
 						</table>
 					</div>
-				</section>
+				</div>
 				<div class="mt50 col-6 col-md-8 col-sm-11">
 					<a href="/contact" class="d-b ta-c fw-b hov c-blue bd-blue bdrs-max ptb10 plr40">ご応募・お問合わせはフォームから！</a>
 				</div>
 			</div>
 		</section>
 
-	</section>
+	</div>
 </main>
 
 <!-- footer -->
@@ -284,7 +284,6 @@
 					</div>
 				</div>
 			</div>
-		</div>
 	</div>
 	<div class="copy bgc-blue ptb15 ta-c">
 		<div class="d-f sm-d-b jc-c c-white ff-sofia fz90 sm-fz80 ta-c">
