--- a/html/07_drums.html
+++ b/html/07_drums.html
@@ -82,7 +82,7 @@
 
 <!-- main -->
 <main>
-	<section id="content">
+	<div id="content">
 	
 		<!-- #hero -->
 		<div class="hero view view-slideup">
@@ -158,8 +158,8 @@
 				</div>
 			</div>
 			<div class="cols gutter-70 gutter-md-40">
-				<section class="col-10 col-sm-12 mt50 sm-mt-20 z1 ord1 sm-ord2">
-					<div class="bg-dots bd-blue ptb60 pl80 pr60 sm-ptb40 sm-pl30 sm-pr30 bdrs15">						
+				<div class="col-10 col-sm-12 mt50 sm-mt-20 z1 ord1 sm-ord2">
+					<div class="bg-dots bd-blue ptb60 pl80 pr60 sm-ptb40 sm-pl30 sm-pr30 bdrs15">			
 						<section>
 							<h4 class="c-white ff-sofia bgc-blue d-ib bdrs5 ptb5 plr20">STEP 01</h4>
 							<p class="mt25">シングルストロークを基本としたスティックコントロール 、コーディネーションなどの基礎トレーニングをゆっくり着実に行い、無理なくリズムパターンやフィルインの実践パターンへ発展させていきます。</p>
@@ -173,7 +173,7 @@
 							<p class="mt25">ポリリズム等の奇数連符のマスターをします。ジャズやボサノバ等様々なリズムスタイルの演奏を習得すると共に幅広く音楽を学び、音楽を自由に表現できる力を養っていきます。</p>
 						</section>
 					</div>
-				</section>
+				</div>
 				<div class="col-5 col-sm-6 return-3 return-sm-0 sm-mr20 mt-150 md-mt-100 sm-mt-60 z2 ord2 sm-ord1">
 					<figure><img src="../img/drums/sec3-img1.jpg" width="314" height="290" class="img-rspsv-full" alt="レッスン内容例"></figure>
 				</div>
@@ -274,7 +274,7 @@
 			</div>
 		</section>
 
-	</section>
+	</div>
 </main>
 
 <!-- footer -->
@@ -357,7 +357,6 @@
 					</div>
 				</div>
 			</div>
-		</div>
 	</div>
 	<div class="copy bgc-blue ptb15 ta-c">
 		<div class="d-f sm-d-b jc-c c-white ff-sofia fz90 sm-fz80 ta-c">
