--- a/html/32_event.html
+++ b/html/32_event.html
@@ -82,7 +82,7 @@
 
 <!-- main -->
 <main>
-	<section id="content">
+	<div id="content">
 	
 		<!-- #hero -->
 		<div class="hero view view-slideup">
@@ -251,13 +251,14 @@
 							<p class="mt30">先生と生徒さんの交流イベントです。普段聞けないプライベートトークで盛り上がること間違いなし！音楽仲間の輪を広げましょう。</p>
 						</div>
 					</section>
-					<section class="col-6 col-sm-12 ta-c">
+					<div class="col-6 col-sm-12 ta-c">
 						<figure><img src="../img/event/sec3-il1.png" width="155" height="101" class="img-rspsv" alt="event"></figure>
-					</section>
+					</div>
 				</div>
 			</section>
 	
-	</section>
+		</div>
+	</div>
 </main>
 
 <!-- footer -->
@@ -340,7 +341,6 @@
 					</div>
 				</div>
 			</div>
-		</div>
 	</div>
 	<div class="copy bgc-blue ptb15 ta-c">
 		<div class="d-f sm-d-b jc-c c-white ff-sofia fz90 sm-fz80 ta-c">
