--- a/html/36_company.html
+++ b/html/36_company.html
@@ -82,7 +82,7 @@
 
 <!-- main -->
 <main>
-	<section id="content">
+	<div id="content">
 	
 		<!-- #hero -->
 		<div class="hero view view-slideup">
@@ -164,7 +164,7 @@
 								<img src="../img/base/ic-dot.png" width="20" height="5" class="img-rspsv" alt="dot">
 							</div>
 						</div>
-						<section class="col-12 mt50 view view-slideup">
+						<div class="col-12 mt50 view view-slideup">
 							<table class="tbl-basic">
 								<tbody>
 									<tr>
@@ -217,7 +217,7 @@
 									</tr>
 								</tbody>
 							</table>
-						</section>
+						</div>
 					</div>
 				</div>
 			</section>
@@ -300,8 +300,8 @@
 				</div>
 			</section>
 			
-	
-	</section>
+		</div>
+	</div>
 </main>
 
 <!-- footer -->
@@ -384,7 +384,6 @@
 					</div>
 				</div>
 			</div>
-		</div>
 	</div>
 	<div class="copy bgc-blue ptb15 ta-c">
 		<div class="d-f sm-d-b jc-c c-white ff-sofia fz90 sm-fz80 ta-c">
