--- a/html/37_new.html
+++ b/html/37_new.html
@@ -81,7 +81,7 @@
 
 <!-- main -->
 <main>
-	<section id="content">
+	<div id="content">
 	
 		<!-- #hero -->
 		<div class="hero view view-slideup">
@@ -170,7 +170,7 @@
 			</div>
 		</section>
 
-	</section>
+	</div>
 </main>
 
 <!-- footer -->
@@ -253,7 +253,6 @@
 					</div>
 				</div>
 			</div>
-		</div>
 	</div>
 	<div class="copy bgc-blue ptb15 ta-c">
 		<div class="d-f sm-d-b jc-c c-white ff-sofia fz90 sm-fz80 ta-c">
