--- a/html/③_privacy.html
+++ b/html/③_privacy.html
@@ -81,7 +81,7 @@
 
 <!-- main -->
 <main>
-	<section id="content">
+	<div id="content">
 	
 		<!-- #hero -->
 		<div class="hero view view-slideup">
@@ -151,7 +151,7 @@
 
 		</section>
 
-	</section>
+	</div>
 </main>
 
 
@@ -235,7 +235,6 @@
 					</div>
 				</div>
 			</div>
-		</div>
 	</div>
 	<div class="copy bgc-blue ptb15 ta-c">
 		<div class="d-f sm-d-b jc-c c-white ff-sofia fz90 sm-fz80 ta-c">
