--- a/html/02_about.html
+++ b/html/02_about.html
@@ -132,7 +132,7 @@
 									<p>自分は本当に楽器ができるのか、どんな楽器がいいのか…新しいことを始めるのに、不安はつきものですよね。</p>
 									<p class="mt15">パピーでは体験レッスン時に無料で楽器をお貸し出し。入会されたら楽器プレゼントor入会金割引どちらか選べます。楽器メーカーではないパピーだからこそできる、忖度のない安心のサービスです。</p>
 									<div class="mt30">
-										<a href="/trial" class="sm-d-b ta-c fw-b hov c-blue bd-blue bdrs-max ptb15 plr40">詳細はこちらから</a>
+										<a href="/trial" class="sm-d-b ta-c fw-b hov c-blue bd-blue bdrs-max ptb15 sm-ptb10 plr40">詳細はこちらから</a>
 									</div>
 								</div>
 							</div>
