--- a/html/④_error.html
+++ b/html/④_error.html
@@ -99,7 +99,7 @@
 					URLの入力間違いか、ページが移動している可能性があります。</p>
 					
 					<div class="mt50 sm-mt30">
-						<a href="/" class="sm-d-b ta-c fw-b hov c-white bgc-blue bdrs-max ptb15 plr60 sm-plr40">トップページにもどる</a>
+						<a href="/" class="sm-d-b ta-c fw-b hov c-white bgc-blue bdrs-max ptb15 sm-ptb10 plr60 sm-plr40">トップページにもどる</a>
 					</div>
 				</div>
 			</div>
