--- a/html/01_top.html
+++ b/html/01_top.html
@@ -183,10 +183,10 @@
 							<a href="/singing" class="hov course11"><span>singing</span>声楽</a>
 						</div>
 					</section>
-					<!-- 管楽器・打楽器系コース -->
+					<!-- 管楽器コース -->
 					<section class="mt60 sm-mt40 cols nega gutter-20 gutter-sm-10">
 						<div class="col-12">
-							<h3 class="ribbon-green">管楽器・打楽器系コース</h3>
+							<h3 class="ribbon-green">管楽器コース</h3>
 						</div>
 						<div class="col-3 col-md-4 col-sm-6 mt20 sm-mt20">
 							<a href="/flute" class="hov course12"><span>flute</span>フルート</a>
@@ -243,11 +243,11 @@
 					</section>
 					<section class="col-4 col-md-6 mt40">
 						<a href="/nagoya-minato" class="ptb20 sm-ptb15 plr10 bb-black bt-black d-b btn-ar"><h3>名古屋みなと教室</h3></a>
-						<p class="mt30 sm-fz90">〒455-0804<br>名古屋市港区当知2丁目1501番地</p>
+						<p class="mt30 sm-fz90">〒455-0804<br>名古屋市港区当知2-1501</p>
 					</section>
 					<section class="col-4 col-md-6 mt40">
 						<a href="/okazaki-onishi" class="ptb20 sm-ptb15 plr10 bb-black bt-black d-b btn-ar"><h3>岡崎大西教室</h3></a>
-						<p class="mt30 sm-fz90">〒444-0871<br>岡崎市大西3丁目2-5</p>
+						<p class="mt30 sm-fz90">〒444-0871<br>岡崎市大西3-2-5</p>
 					</section>
 					<section class="col-4 col-md-6 mt40">
 						<a href="/okazaki-yahagi" class="ptb20 sm-ptb15 plr10 bb-black bt-black d-b btn-ar"><h3>岡崎矢作教室</h3></a>
@@ -259,7 +259,7 @@
 					</section>
 					<section class="col-4 col-md-6 mt40">
 						<a href="/anjyo" class="ptb20 sm-ptb15 plr10 bb-black bt-black d-b btn-ar"><h3>安城今池教室</h3></a>
-						<p class="mt30 sm-fz90">〒446-0071 <br>安城市今池町1丁目13番地1 3F</p>
+						<p class="mt30 sm-fz90">〒446-0071 <br>安城市今池町1-13-1 3F</p>
 					</section>
 					<section class="col-4 col-md-6 mt40">
 						<a href="/gamagori" class="ptb20 sm-ptb15 plr10 bb-black bt-black d-b btn-ar"><h3>蒲郡教室</h3></a>
