--- a/html/16_flute.html
+++ b/html/16_flute.html
@@ -304,7 +304,7 @@
 		<section id="sec5" class="course-link pb40 bgc-gray sm-plr20">
 			<div class="cols gutter-20 gutter-sm-10">
 				<div class="col-12 mt-20">
-					<h3 class="ribbon-black -gray">管楽器・打楽器系コース</h3>
+					<h3 class="ribbon-black -gray">管楽器コース</h3>
 				</div>
 				<div class="col-3 col-md-4 col-sm-6 mt20 sm-mt20">
 					<a href="/flute" class="hov course12"><span>flute</span>フルート</a>
