--- a/html/22_nagoya-meito.html
+++ b/html/22_nagoya-meito.html
@@ -145,7 +145,7 @@
 									<a href="https://goo.gl/maps/L6c3Es8Ga18WsVEeA" class="hov bb-black pb5" target="_blank">→ Googlemap</a></td>
 							</tr>
 							<tr>
-								<th>電話番号 / FAX</th>
+								<th>電話番号</th>
 								<td><a href="tel:0527848419" class="tel-link hov">052-784-8419</a></td>
 							</tr>
 							<tr>
