--- a/html/23_nagoya-minato.html
+++ b/html/23_nagoya-minato.html
@@ -140,11 +140,11 @@
 							</tr>
 							<tr>
 								<th>住所</th>
-								<td>愛知県名古屋市港区当知2丁目1501番地<br>
+								<td>愛知県名古屋市港区当知2-1501<br>
 									<a href="https://goo.gl/maps/NKUiMVcWK92Ps8W3A" class="hov bb-black pb5" target="_blank">→ Googlemap</a></td>
 							</tr>
 							<tr>
-								<th>電話番号 / FAX</th>
+								<th>電話番号</th>
 								<td><a href="tel:0523556349" class="tel-link hov">052-355-6349</a></td>
 							</tr>
 							<tr>
