--- a/html/24_okazaki-onishi.html
+++ b/html/24_okazaki-onishi.html
@@ -140,11 +140,11 @@
 							</tr>
 							<tr>
 								<th>住所</th>
-								<td>愛知県岡崎市大西3丁目2-5<br class="d-n sm-d-b">（名鉄本線「男川駅」より徒歩8分）<br>
+								<td>愛知県岡崎市大西3-2-5<br class="d-n sm-d-b">（名鉄本線「男川駅」より徒歩8分）<br>
 									<a href="https://goo.gl/maps/SW7eNLgMnzAZYZxi6" class="hov bb-black pb5" target="_blank">→ Googlemap</a></td>
 							</tr>
 							<tr>
-								<th>電話番号 / FAX</th>
+								<th>電話番号</th>
 								<td><a href="tel:0564645349" class="tel-link hov">0564-64-5349</a></td>
 							</tr>
 							<tr>
