--- a/html/25_okazaki-yahagi.html
+++ b/html/25_okazaki-yahagi.html
@@ -145,7 +145,7 @@
 									<a href="https://goo.gl/maps/rSK11WAMTow5XN5T9" class="hov bb-black pb5" target="_blank">→ Googlemap</a></td>
 							</tr>
 							<tr>
-								<th>電話番号 / FAX</th>
+								<th>電話番号</th>
 								<td><a href="tel:0564341349" class="tel-link hov">0564-34-1349</a></td>
 							</tr>
 							<tr>
