--- a/html/26_kariya.html
+++ b/html/26_kariya.html
@@ -148,7 +148,7 @@
 									<a href="https://goo.gl/maps/9M24dUYJNZdvXuBn8" class="hov bb-black pb5" target="_blank">→ Googlemap</a></td>
 							</tr>
 							<tr>
-								<th>電話番号 / FAX</th>
+								<th>電話番号</th>
 								<td><a href="tel:0566251349" class="tel-link hov">0566-25-1349</a></td>
 							</tr>
 							<tr>
