--- a/html/28_gamagori.html
+++ b/html/28_gamagori.html
@@ -130,7 +130,7 @@
 									<a href="https://goo.gl/maps/cdNyytnyrM4Xn7ZH7" class="hov bb-black pb5" target="_blank">→ Googlemap</a></td>
 							</tr>
 							<tr>
-								<th>電話番号 / FAX</th>
+								<th>電話番号</th>
 								<td><a href="tel:0120082349" class="tel-link hov">0120-082-349</a>（パピーミュージックスクール本部）</td>
 							</tr>
 						</tbody>
