--- a/html/A_contact.html
+++ b/html/A_contact.html
@@ -118,7 +118,7 @@
 									<td>
 										<div class="select">
 											<select name="お問い合わせ内容">
-												<option value="" selected="selected">選択して下さい</option>
+												<option value="" selected="selected">選択してください</option>
 												<option value="教室について">教室について</option>
 												<option value="入会・退会について">入会・退会について</option>
 												<option value="採用について">採用について</option>
