--- a/html/B_application.html
+++ b/html/B_application.html
@@ -236,7 +236,7 @@
 									<td>
 										<div class="select">
 											<select name="希望コース" required="required">
-												<option value="" selected="selected">選択して下さい</option>
+												<option value="" selected="selected">選択してください</option>
 												<option value="ピアノ">ピアノ</option>
 												<option value="ヴォーカル">ヴォーカル</option>
 												<option value="エレキギター">エレキギター</option>
@@ -266,7 +266,7 @@
 									<td>
 										<div class="select">
 											<select name="レッスン形態" required="required">
-												<option value="" selected="selected">選択して下さい</option>
+												<option value="" selected="selected">選択してください</option>
 												<option value="個人">個人</option>
 												<option value="グループ">グループ</option>
 												<option value="未定">未定</option>
@@ -297,7 +297,7 @@
 									<td>
 										<div class="select">
 											<select name="希望コースの経験" required="required">
-												<option value="" selected="selected">選択して下さい</option>
+												<option value="" selected="selected">選択してください</option>
 												<option value="無し">無し</option>
 												<option value="少々有り">少々有り</option>
 												<option value="有り">有り</option>
@@ -311,7 +311,7 @@
 									<td>
 										<div class="select">
 											<select name="内容">
-												<option value="" selected="selected">選択して下さい</option>
+												<option value="" selected="selected">選択してください</option>
 												<option value="無し">無し</option>
 												<option value="有り">有り</option>
 											</select>
@@ -334,7 +334,7 @@
 									<td>
 										<div class="select">
 											<select name="職業">
-												<option value="" selected="selected">選択して下さい</option>
+												<option value="" selected="selected">選択してください</option>
 												<option value="会社員">会社員</option>
 												<option value="学生">学生</option>
 												<option value="主婦">主婦</option>
@@ -352,7 +352,7 @@
 									<td>
 										<div class="select">
 											<select name="当スクールを知ったきっかけ">
-												<option value="" selected="selected">選択して下さい</option>
+												<option value="" selected="selected">選択してください</option>
 												<option value="ネット検索">ネット検索</option>
 												<option value="雑誌、チラシ">雑誌、チラシ</option>
 												<option value="知人の紹介">知人の紹介</option>
