--- a/html/27_anjyo.html
+++ b/html/27_anjyo.html
@@ -133,7 +133,7 @@
 									<a href="https://goo.gl/maps/FGdeFMQDKQuNvpRy8" class="hov bb-black pb5" target="_blank">→ Googlemap</a></td>
 							</tr>
 							<tr>
-								<th>電話番号 / FAX</th>
+								<th>電話番号</th>
 								<td><a href="tel:0120082349" class="tel-link hov">0120-082-349</a></td>
 							</tr>
 							<tr>
